src/index.css
:root {
  --gunmetal: #253347;
  --darkblue: #5e6e85;
  --blue: #345ff6;
}

html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}
body {
  margin: 0;
  font-family: "Inter", sans-serif;
  background-color: #f8f9fa;
}

h2,
h3,
h4 {
  color: var(--gunmetal);
}

p {
  color: var(--darkblue);
}

.main {
  display: flex;
  flex-direction: column;
}

.hero {
  position: relative;
  display: flex;
  flex-direction: row;
  margin-bottom: 2.5rem;
}

.hero-left {
  padding: 15% 18% 12% 12%;
  transform: translate(-4%, -4%);
  background: linear-gradient(to bottom right, white, #d6e6fe);
  border-radius: 5%;
  width: 75%;
}

h1 {
  color: var(--gunmetal);
  font-size: 4.8rem;
  width: 90%;
}

.hero-left p {
  font-size: 1.4rem;
  font-weight: 300;
  max-width: 70%;
}

.form {
  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
  background-color: white;
  display: grid;
  position: absolute;
  height: auto;
  right: 10%;
  top: 25%;
  width: auto;
  padding: 2.2rem;
  border-radius: 5%;
  grid-template-columns: minmax(100px, 300px) minmax(100px, 300px);
  grid-template-rows: auto;
  gap: 30px;
  column-gap: 20px;
}

form h2 {
  grid-column: span 2;
  height: fit-content;
  margin: 0;
  max-width: fit-content;
  font-size: 1.6rem;
}

input[type="radio"] {
  margin-right: 0.75rem;
  transform: scale(2.2);
}

.toggle {
  margin-bottom: 10px;
}

.toggle label {
  color: var(--gunmetal);
  font-weight: 700;
  margin-left: 10px;
  font-size: 1.2rem;
}

.input-group label {
  font-weight: 300;
  margin-left: 5px;
}

.input-wrapper {
  position: relative;
  margin-top: 7px;
}

input[type="number"] {
  padding: 0.5rem 2rem 0.5rem 1.3rem;
  color: var(--gunmetal);
  border: 1px solid #757575;
  border-radius: 10px;
  height: 65px;
  width: 100%;
  height: 75px;
  font-size: 1.5rem;
  font-weight: 700;
}

span {
  position: absolute;
  right: 1.5rem;
  top: 1.3rem;
  color: var(--blue);
  font-size: 1.6rem;
  font-weight: 700;
}

.form-footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  grid-column: span 2;
  background-color: var(--blue);
  border-radius: 20px;
  padding: 2rem;
}

.form-footer h3 {
  margin: 10px 0 25px 15px;
  color: white;
  font-size: 1.6rem;
}

.form-footer p {
  margin: 0 0 10px 0;
  color: white;
  font-size: 1.1rem;
  text-align: center;
}

.active {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.active h3 {
  margin-bottom: 1rem;
}

strong {
  font-size: 4.5rem;
  margin-left: 10px;
  color: white;
}

.active p {
  width: 45%;
  align-self: center;
  text-align: left;
  margin: 0;
  padding-right: 1rem;
}

.result {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: 20px;
  margin-bottom: 3rem;
}

.img-container {
  max-width: 45%;
  margin-left: 8%;
}

.img-container img {
  max-width: 90%;
}

.text-result {
  max-width: 40%;
  margin-right: 4%;
  margin-top: 8%;
  word-wrap: break-word;
}

.text-result h2 {
  font-size: 3.6rem;
  max-width: 90%;
}

.text-result p {
  font-size: 1.4rem;
  max-width: 85%;
  margin-top: 4rem;
}

.tips-container {
  display: flex;
  justify-content: center;
}

.tips {
  display: flex;
  justify-content: space-between;
  padding: 8% 4%;
  width: 90%;
  border-radius: 50px;
  background: linear-gradient(
    135deg,
    rgba(248, 249, 250, 1) 30%,
    rgba(214, 252, 254, 0.35) 100%
  );
}

.tip {
  max-width: 31%;
}

.tip img {
  width: 74px;
  margin-bottom: 2rem;
}

.tip-text h3 {
  font-size: 1.8rem;
}

.tip-text p {
  font-size: 1.4rem;
}

.limitations {
  margin: 3rem 6% 0 6%;
  position: relative;
}

.limit-intro {
  max-width: 45%;
}

.limit-intro h2 {
  font-size: 3.6rem;
}

.limit-intro p {
  font-size: 1.4rem;
}

.items {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 1.5rem;
  justify-items: center;
  transform: translateY(-29%);
  position: relative;
  /* bottom: 230px; */
}

.item-header {
  display: flex;
  max-height: 80px;
}

.item-header h4 {
  margin: 0 0 0 15px;
  font-size: 1.8rem;
}

.items p {
  font-size: 1.4rem;
  margin-bottom: 0;
}

.item {
  background-color: #fff;
  max-width: 490px;
  max-height: fit-content;
  padding: 2.5rem;
  border-radius: 10px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.items .item:nth-of-type(1) {
  grid-area: 1/2/2/4;
  margin-left: 24%;
}

.items .item:nth-of-type(2) {
  grid-area: 2/2/3/3;
  margin-left: 9%;
}

.items .item:nth-of-type(3) {
  grid-area: 2/3/3/4;
  margin-right: 9%;
}

.items .item:nth-of-type(4) {
  grid-area: 3/1/4/3;
  margin-left: 9%;
}

.items .item:nth-of-type(5) {
  grid-area: 3/2/4/4;
}

@media (max-width: 1300px) {
  .text-result h2 {
    font-size: 3rem;
    margin-bottom: 1rem;
  }

  .text-result p {
    font-size: 1.2rem;
    margin-top: 2rem;
  }
}

@media (max-width: 1000px) {
  .main {
    font-family: "Inter", sans-serif;
  }

  .hero {
    display: flex;
    align-items: center;
    flex-direction: column;
    max-height: 900px;
    margin: 0;
  }

  .hero-left {
    all: initial;
    font-family: inherit;
    text-align: center;
    background: linear-gradient(to bottom right, white, #d6e6fe);
    border-radius: 5%;
    padding: 4rem 1.5rem 20rem 1.5rem;
  }

  .hero-left h1,
  .hero-left p {
    width: auto;
    max-width: 100%;
  }

  .hero-left h1 {
    font-size: 3rem;
  }

  .hero-left p {
    font-size: 1rem;
    font-weight: 300;
    max-width: 6500px;
  }

  .form {
    position: static;
    justify-content: center;
    max-width: 90%;
    transform: translateY(-300px);
  }

  .result {
    all: initial;
    display: flex;
    font-family: inherit;
    justify-content: space-between;
  }

  .img-container {
    max-width: 55%;
    margin-left: -10%;
  }

  .img-container img {
    all: initial;
    max-width: 100%;
  }

  .text-result {
    all: initial;
    font-family: inherit;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 45%;
    margin-right: 5%;
    margin-top: 5%;
  }

  .text-result h2 {
    font-size: 2rem;
    width: 100%;
    max-width: 100%;
    margin-top: 0;
  }

  .text-result p {
    font-size: 1.2rem;
    width: auto;
    margin-top: 0;
    max-width: 500px;
  }

  .tips-container {
    margin-top: 5rem;
  }

  .tips {
    flex-direction: column;
    width: 100%;
    padding: 5% 5%;
  }

  .tip {
    max-width: 100%;
    display: flex;
    flex-direction: row;
  }

  .tip-text h3 {
    font-size: 1.6rem;
  }

  .tip-text p {
    font-size: 1.2rem;
  }

  .tip img {
    margin-right: 6%;
  }

  .limit-intro {
    text-align: center;
    margin-bottom: 5rem;
  }

  .limit-intro h2 {
    font-size: 2.8rem;
  }

  .limit-intro p {
    font-size: 1.2rem;
  }

  .items {
    grid-template-columns: 1fr 1fr;
  }

  .item {
    max-height: 320px;
    min-width: 200px;
  }

  .items div:nth-of-type(5) {
    grid-column: 1/3;
    justify-self: center;
  }
}

